--- a/styles/General/general.css
+++ b/styles/General/general.css
@@ -10,5 +10,11 @@ html {
 }
 
 body {
-  background: linear-gradient(135deg, #f5f5f5 0%, #dcdcdc 55%, #808080 100%);
+  background: #ffffff;
+}
+
+footer {
+  height: 30rem;
+  width: 100vw;
+  background-color: rgb(52, 164, 78);
 }
