working on the footer

--- a/styles/General/general.css
+++ b/styles/General/general.css
@@ -7,14 +7,9 @@
 
 html {
   font-family: "Lato", "Poppins", var(--font-euclid);
+  /* overflow-x: hidden; */
 }
 
 body {
   background: #ffffff;
-}
-
-footer {
-  height: 30rem;
-  width: 100vw;
-  background-color: rgb(52, 164, 78);
 }
