--- a/styles/General/nav.css
+++ b/styles/General/nav.css
@@ -22,7 +22,7 @@ div.nav-wrapper {
 }
 
 a.obt-logo img {
-  height: 15rem;
+  height: clamp(8rem, 25vw, 15rem);
   width: auto;
 }
 
@@ -69,10 +69,15 @@ nav svg.hamburger-menu {
   margin-right: 1rem;
   display: none;
   cursor: pointer;
+  transition: all ease 0.3s;
 }
 
 nav svg.hamburger-menu path {
   fill: var(--lightgreen);
+}
+
+nav svg.hamburger-menu:hover {
+  transform: scale(1.1, 1.1);
 }
 
 nav aside {
@@ -91,7 +96,7 @@ nav aside {
 
 aside div.over-lay {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.05);
   width: 100vw;
   height: 100vh;
   z-index: -1;
@@ -109,10 +114,16 @@ aside div.as-logo img {
 aside div.as-logo svg {
   height: 1.5rem;
   margin: 0 1rem 0 auto;
+  transition: all ease 0.3s;
+  cursor: pointer;
 }
 
 div.as-logo svg g {
   fill: var(--lightgreen);
+}
+
+aside div.as-logo svg:hover {
+  transform: scale(1.15, 1.15);
 }
 
 aside ul {
@@ -135,6 +146,7 @@ aside ul a {
 
 aside ul a:hover {
   color: var(--black);
+  transform: scale(1.3, 1.3);
 }
 
 aside div.as-footer {
