--- a/styles/Home/indexMain.css
+++ b/styles/Home/indexMain.css
@@ -33,7 +33,7 @@ div.hero-text {
 
 div.hero-text h1 {
   text-align: center;
-  font-size: 2.8rem;
+  font-size: clamp(1.5rem, 5vw, 3rem);
   margin-bottom: 2rem;
   transform: translateX(-30%);
   opacity: 0;
@@ -54,7 +54,7 @@ div.hero-text h1 {
 
 div.hero-text p {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 3vw, 1.5rem);
   margin-bottom: 2rem;
   transform: translateX(-30%);
   opacity: 0;
@@ -64,6 +64,7 @@ div.hero-text p {
 
 div.hero-text p.unesco {
   font-style: italic;
+  font-size: clamp(1rem, 3vw, 1.5rem);
   color: var(--lightgreen);
   text-align: left;
   margin-left: 3rem;
@@ -104,12 +105,12 @@ div.write-up {
 }
 
 div.write-up h2 {
-  font-size: 2rem;
+  font-size: clamp(1.3rem, 5vw, 2rem);
   color: var(--black);
 }
 
 div.write-up p {
-  font-size: 1.2rem;
+  font-size: clamp(1rem, 5vw, 1.2rem);
   color: var(--textGray);
   text-align: justify;
 }
@@ -146,12 +147,16 @@ div.whyOBM {
 }
 
 div.whyOBM h2 {
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 5vw, 2rem);
   color: var(--black);
 }
 
+div.qhyOBM h3 {
+  font-size: clamp(1rem, 5vw, 1.2rem);
+}
+
 div.whyOBM p {
-  font-size: 1.1rem;
+  font-size: clamp(1rem, 5vw, 1.2rem);
   color: var(--textGray);
 }
 
@@ -161,6 +166,7 @@ div.whyOBM p.quote {
   font-weight: 700;
   font-style: italic;
   color: var(--black);
+  font-size: clamp(1rem, 5vw, 1.2rem);
 }
 
 div.vision-pic {
@@ -262,4 +268,36 @@ div.com-texts p {
   font-weight: 700;
   max-width: 30rem;
   color: rgb(255, 255, 255);
+}
+
+@media (max-width: 1020px) {
+  div.sec-wrapper {
+    flex-direction: column;
+  }
+
+  div.write-up,
+  div.little-child {
+    width: 100%;
+  }
+
+  div.little-child {
+    height: 25rem; /* Adjust as needed*/
+  }
+
+  div.vision-pic {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+
+  div.vision-texts h2,
+  div.com-texts h2 {
+    font-size: clamp(1.3rem, 5vw, 2rem);
+    margin-left: 1rem;
+  }
+
+  div.vision-texts p,
+  div.com-texts p {
+    font-size: clamp(0.5rem, 5vw, 1.6rem);
+    margin: 0 1rem;
+  }
 }
