--- a/styles/General/footer.css
+++ b/styles/General/footer.css
@@ -27,18 +27,22 @@ footer div.sup-ymte {
 
 footer div.sup-ymte h2 {
   margin-bottom: 1rem;
+  font-size: clamp(1.1rem, 4vw, 1.6rem);
 }
 
 footer div.sup-ymte p {
   text-align: justify;
+  font-size: clamp(0.6rem, 3.5vw, 1rem);
 }
 
 footer div.q-links h2 {
+  font-size: clamp(1.1rem, 4vw, 1.6rem);
   margin-bottom: 2.5rem;
 }
 
 footer div.q-links ul {
   list-style: none;
+  font-size: clamp(0.6rem, 3.5vw, 1rem);
 }
 
 footer div.q-links ul li {
@@ -61,15 +65,16 @@ footer div.fs-child {
 }
 
 footer div.conn-ws h2 {
+  font-size: clamp(1.1rem, 4vw, 1.6rem);
   margin-bottom: 2rem;
 }
 
 footer div.conn-ws ul {
+  font-size: clamp(0.6rem, 3.5vw, 1rem);
   list-style: none;
-}
-
-footer div.conn-ws ul li {
-  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
 }
 
 footer div.conn-ws ul a {
@@ -104,14 +109,13 @@ footer div.conn-ws ul svg {
 }
 
 footer div.address h2 {
+  font-size: clamp(1.1rem, 5vw, 1.6rem);
   margin-bottom: 1rem;
 }
 
-footer div.address h2 {
-  margin-bottom: 2rem;
-}
-
 footer div.address p {
+  font-size: clamp(0.6rem, 3.5vw, 1rem);
+  text-align: justify;
   max-width: 18rem;
 }
 
@@ -129,7 +133,7 @@ footer div.copyright div {
 
 footer div.copyright p {
   text-align: center;
-  font-size: 0.8rem;
+  font-size: clamp(0.4rem, 3vw, 0.8rem);
 }
 
 footer p.c-right {
@@ -144,11 +148,6 @@ footer p.c-right {
     justify-content: center;
   }
 
-  /* footer div.fs-child {
-    justify-content: space-between;
-    margin-left: 7rem;
-  } */
-
   footer div.address p {
     max-width: 12rem;
   }
@@ -160,5 +159,10 @@ footer p.c-right {
     flex-direction: column;
     row-gap: 2rem;
     margin: 0 1.5rem 0 1.5rem;
+  }
+
+  footer div.q-links h2,
+  footer div.conn-ws h2 {
+    margin-bottom: 1rem;
   }
 }
