--- a/styles/Home/indexMain.css
+++ b/styles/Home/indexMain.css
@@ -1,5 +1,5 @@
 main {
-  margin-bottom: 7rem;
+  margin-bottom: clamp(3.5rem, 10vw, 7rem);
 }
 
 div.childrenPic {
@@ -13,7 +13,7 @@ div.childrenPic {
   justify-content: center;
   position: relative;
   z-index: -1;
-  margin-bottom: 7rem;
+  margin-bottom: clamp(3rem, 10vw, 7rem);
 }
 
 div.childrenPic::before {
@@ -90,19 +90,20 @@ div.hero-text p.unesco {
 div.sec-content {
   display: flex;
   justify-content: center;
-  margin-bottom: 7rem;
+  margin-bottom: clamp(3rem, 10vw, 7rem);
 }
 
 div.sec-wrapper {
   max-width: 85%;
-  display: flex;
-  gap: 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3rem;
   align-items: center;
 }
 
-div.write-up {
-  flex: 1;
-}
+/* div.write-up {
+  /* flex: 1; 
+} */
 
 div.write-up h2 {
   font-size: clamp(1.3rem, 5vw, 2rem);
@@ -110,7 +111,7 @@ div.write-up h2 {
 }
 
 div.write-up p {
-  font-size: clamp(1rem, 5vw, 1.2rem);
+  font-size: clamp(1rem, 3vw, 1.5rem);
   color: var(--textGray);
   text-align: justify;
 }
@@ -121,22 +122,19 @@ div.write-up p.tgt {
   font-weight: 700;
 }
 
-div.little-child {
-  flex: 1;
-  background-image: url("../../Images/children_pics/children-7527411_1920.jpg");
-  height: 40rem;
+img.little-child {
+  height: 100%;
   width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   border-radius: 1rem;
+  object-fit: cover;
 }
 
 div.parent-whyOBM {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: clamp(3rem, 10vw, 7rem);
+  padding: 0 1rem;
 }
 
 div.whyOBM {
@@ -156,7 +154,7 @@ div.qhyOBM h3 {
 }
 
 div.whyOBM p {
-  font-size: clamp(1rem, 5vw, 1.2rem);
+  font-size: clamp(1rem, 3vw, 1.5rem);
   color: var(--textGray);
 }
 
@@ -272,7 +270,8 @@ div.com-texts p {
 
 @media (max-width: 1020px) {
   div.sec-wrapper {
-    flex-direction: column;
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
   }
 
   div.write-up,
@@ -286,7 +285,7 @@ div.com-texts p {
 
   div.vision-pic {
     grid-template-columns: 1fr;
-    row-gap: 2rem;
+    row-gap: 3rem;
   }
 
   div.vision-texts h2,
